# AutoMirror

./: .gitignore  README.md  config_sample.toml  pyproject.toml
src/: configs.py  main.py
src/automirror/: __init__.py  configs.py  main.py
