[project]
name = "automirror"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "syhanjin", email = "2819469337@qq.com" }
]
dependencies = [
    "httpx>=0.27.2",
    "socksio>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"automirror" = "automirror:entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/automirror"]
